[gd_scene load_steps=7 format=4 uid="uid://8uaynptrybj8"]

[ext_resource type="Script" uid="uid://c4u6g4gr40nhd" path="res://common/ui/start_menu/start_menu.gd" id="1_52ajb"]
[ext_resource type="FontFile" uid="uid://4jqjadkmkcyr" path="res://common/ui/fonts/yoster.ttf" id="1_rl8pc"]
[ext_resource type="StyleBox" uid="uid://voq2gm207n4n" path="res://common/ui/start_menu/Transparent.tres" id="2_52ajb"]

[sub_resource type="PortableCompressedTexture2D" id="PortableCompressedTexture2D_52ajb"]
_data = PackedByteArray("AAADAAUAAAABAAAAwAAAAIAAAAAsAgAAUklGRiQCAABXRUJQVlA4TBgCAAAvv8AfEBcw//M///MfgAdJtm01dsNbS7y2JNsKjIYhOClV2/GNBjmNgN/gDrOKz62Hs92J6L8Dt20jiQOc6S6cbfYT4W/5yNwpd0KUSL0R6oFJVFWqCWFc4pSAUMYlRikIZUzilCLB88bf6I423cF3/E7e4N9j4XctFBiPlfgHlcRCpLFMWONYmIXCBTPqJN/EFZ4N3DzbWKQWOc6gz7dc4yF9DbDyV6AvZynQ7REy3KTuwh/Ttuyrlm8bO+ixpbM0YW7X4AXQ9ZQbgDQ8PQcAHfqCrvOKb6liLa5sOCMVtNAA9HlSXUIHcsSkZ1yab/7D/CXTv2j+nMyfw/lzPv9/NBYpE4I1UmCBqGudBlcSOzEFyoOLOxY92YxYrPEdsZy/y/eucJVr33llgVAWqERYoBKnROKUEyJSb4R6CGM5UKeBOgn/l49MiVuJLPaFX2LMzxiIG4RRP2WSX2J2FXyNtF0LfcEqZAdfsPI9Fv5ohQJjsd2FCkQSGxd+C2Oy3/Mb2eDZsZtnK9z6hvZ5w6jcUj4AEN+e10Gwp9selZXud+jYQVevbz7mpfM1uU65Ad3WN9h22h5sZMdMFPTBMqw9QjPgKbSL1VGwDODRpKfzzX+YvmT+F82fk/lzOH3O5/+P3CJzEXwK27UMiFNG4rPjPimN7VUhNPYOvr7rj1dhMr7DSj9h1M0CI26JseAWmQu3THNI+Fs/Ag==")
size_override = Vector2(192, 128)

[sub_resource type="Animation" id="Animation_gip8j"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_exq0c"]
_data = {
&"Default": SubResource("Animation_gip8j")
}

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_52ajb")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -432.0
offset_top = 68.0
offset_right = 432.0
offset_bottom = 197.0
grow_horizontal = 2
pivot_offset = Vector2(432, 0)
theme_override_colors/font_color = Color(1, 1, 1, 0.4)
theme_override_fonts/font = ExtResource("1_rl8pc")
theme_override_font_sizes/font_size = 128
text = "Dear Lacuna"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 26.0
offset_right = 100.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 0)
theme_override_constants/separation = 25
alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_colors/icon_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/icon_focus_color = Color(1, 1, 1, 1)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_rl8pc")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = ExtResource("2_52ajb")
theme_override_styles/disabled_mirrored = ExtResource("2_52ajb")
theme_override_styles/disabled = ExtResource("2_52ajb")
theme_override_styles/hover_pressed_mirrored = ExtResource("2_52ajb")
theme_override_styles/hover_pressed = ExtResource("2_52ajb")
theme_override_styles/hover_mirrored = ExtResource("2_52ajb")
theme_override_styles/hover = ExtResource("2_52ajb")
theme_override_styles/pressed_mirrored = ExtResource("2_52ajb")
theme_override_styles/pressed = ExtResource("2_52ajb")
theme_override_styles/normal_mirrored = ExtResource("2_52ajb")
theme_override_styles/normal = ExtResource("2_52ajb")
text = "Start
"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_rl8pc")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = ExtResource("2_52ajb")
theme_override_styles/disabled_mirrored = ExtResource("2_52ajb")
theme_override_styles/disabled = ExtResource("2_52ajb")
theme_override_styles/hover_pressed_mirrored = ExtResource("2_52ajb")
theme_override_styles/hover_pressed = ExtResource("2_52ajb")
theme_override_styles/hover_mirrored = ExtResource("2_52ajb")
theme_override_styles/hover = ExtResource("2_52ajb")
theme_override_styles/pressed_mirrored = ExtResource("2_52ajb")
theme_override_styles/pressed = ExtResource("2_52ajb")
theme_override_styles/normal_mirrored = ExtResource("2_52ajb")
theme_override_styles/normal = ExtResource("2_52ajb")
text = "Exit
"

[node name="Controls" type="Button" parent="VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_rl8pc")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = ExtResource("2_52ajb")
theme_override_styles/disabled_mirrored = ExtResource("2_52ajb")
theme_override_styles/disabled = ExtResource("2_52ajb")
theme_override_styles/hover_pressed_mirrored = ExtResource("2_52ajb")
theme_override_styles/hover_pressed = ExtResource("2_52ajb")
theme_override_styles/hover_mirrored = ExtResource("2_52ajb")
theme_override_styles/hover = ExtResource("2_52ajb")
theme_override_styles/pressed_mirrored = ExtResource("2_52ajb")
theme_override_styles/pressed = ExtResource("2_52ajb")
theme_override_styles/normal_mirrored = ExtResource("2_52ajb")
theme_override_styles/normal = ExtResource("2_52ajb")
text = "Controls
"

[node name="LeftArrow" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(485, 401)
texture = SubResource("PortableCompressedTexture2D_52ajb")
hframes = 3
vframes = 2
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"i_mode": 0,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "Sprite2D/AnimationPlayer",
"slice": "",
"source": "res://Assets/Selection.aseprite",
"source_uid": 6834331695804360138
}
metadata/_aseprite_wizard_source_file_hash_ = "f82c0c0b29441610e8d6e599b1bd9546"

[node name="LeftAnimation" type="AnimationPlayer" parent="LeftArrow"]
libraries = {
&"": SubResource("AnimationLibrary_exq0c")
}

[node name="RightArrow" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(704, 401)
scale = Vector2(-1, 1)
texture = SubResource("PortableCompressedTexture2D_52ajb")
hframes = 3
vframes = 2
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"i_mode": 0,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "Sprite2D/AnimationPlayer",
"slice": "",
"source": "res://Assets/Selection.aseprite",
"source_uid": 6834331695804360138
}
metadata/_aseprite_wizard_source_file_hash_ = "f82c0c0b29441610e8d6e599b1bd9546"

[node name="RightAnimation" type="AnimationPlayer" parent="RightArrow"]
libraries = {
&"": SubResource("AnimationLibrary_exq0c")
}

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_controls_pressed"]
